--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <title>Chat App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
